testdata/invalid/invalid_enum_duplicate_name.bop
enum MyEnum {
    A = 1;
    A = 2;
}
